:broom: Clean up the gradle build scripts a little
Changes:
- Move all dependency versions to a shared file
- Order the projects in settings.gradle

--- a/cloud-discord/cloud-javacord/build.gradle
+++ b/cloud-discord/cloud-javacord/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     api project(':cloud-core')
-    implementation 'org.javacord:javacord:3.1.1'
+    implementation "org.javacord:javacord:${vers['javacord']}"
 }
