--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,9 @@ cloud = "2.0.0-SNAPSHOT"
 
 # External
 immutables = "2.10.0"
-jda = "5.0.0-beta.19"
+javacord = "3.1.1"
+jda = "4.2.1_257"
+jda5 = "5.0.0-beta.19"
 
 # Test
 jupiterEngine = "5.10.1"
@@ -32,7 +34,9 @@ cloud-annotations = { group = "cloud.commandframework", name = "cloud-annotation
 
 # External
 immutables = { group = "org.immutables", name = "value", version.ref = "immutables" }
+javacord = { group = "org.javacord", name = "javacord", version.ref = "javacord" }
 jda = { group = "net.dv8tion", name = "JDA", version.ref = "jda" }
+jda5 = { group = "net.dv8tion", name = "JDA", version.ref = "jda5" }
 
 # Test
 jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "jupiterEngine" }
