--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ immutables = "2.10.0"
 javacord = "3.8.0"
 jda = "4.4.1_353"
 jda5 = "5.0.0-beta.19"
+logback = "1.4.14"
 
 # Test
 jupiterEngine = "5.10.1"
@@ -37,6 +38,9 @@ immutables = { group = "org.immutables", name = "value", version.ref = "immutabl
 javacord = { group = "org.javacord", name = "javacord", version.ref = "javacord" }
 jda = { group = "net.dv8tion", name = "JDA", version.ref = "jda" }
 jda5 = { group = "net.dv8tion", name = "JDA", version.ref = "jda5" }
+logback-core = { group = "ch.qos.logback", name = "logback-core", version.ref = "logback" }
+logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
+
 
 # Test
 jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "jupiterEngine" }
