--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,17 +29,17 @@ jobs:
                   else
                     echo "STATUS=release" >> $GITHUB_ENV
                   fi
-            #- name: Publish Snapshot
-            #  if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
-            #  run: ./gradlew publish
-            #  env:
-            #      ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-            #      ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
-            #- name: Publish Release
-            #  if: "${{ env.STATUS == 'release' && github.event_name == 'release' }}"
-            #  run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
-            #  env:
-            #      ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-            #      ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
-            #      ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
-            #      ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
+            - name: Publish Snapshot
+              if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
+              run: ./gradlew publish
+              env:
+                  ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
+                  ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
+            - name: Publish Release
+              if: "${{ env.STATUS == 'release' && github.event_name == 'release' }}"
+              run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
+              env:
+                  ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
+                  ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
+                  ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
+                  ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
