--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=org.incendo
 version=1.0.0-SNAPSHOT
-description=cloud-discord
+description=Discord integrations for Cloud.
 
 org.gradle.caching=true
 org.gradle.parallel=true
