feat: add kord implementation

--- a/.gitignore
+++ b/.gitignore
@@ -190,4 +190,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,java,maven,gradle,kotlin,git
 
 # Example files
-examples/example-jda5/bot.properties
+examples/example-*/bot.properties
