--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: Build
+name: Build cloud-discord
 on:
     push:
         branches: [ "**" ]
         tags-ignore: [ "**" ]
     pull_request:
     release:
-        types: [ released ]
+        types: [ published ]
 jobs:
     build:
         # Only run on PRs if the source branch is on someone else's repo
@@ -20,8 +20,18 @@ jobs:
                   distribution: 'temurin'
                   java-version: 17
             - uses: gradle/gradle-build-action@v2
+              with:
+                  # allow master and *-dev branches to write caches (default is only master/main)
+                  cache-read-only: ${{ github.ref != 'refs/heads/master' && !(endsWith(github.ref, '-dev') && startsWith(github.ref, 'refs/heads/')) }}
             - name: Build
               run: ./gradlew build
+            - name: Upload Test Results
+              if: always()
+              uses: actions/upload-artifact@v4
+              with:
+                  name: Test Results
+                  path: |
+                      **/build/test-results/test/TEST-*.xml
             - name: Determine Status
               run: |
                   if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
@@ -43,3 +53,14 @@ jobs:
                   ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
                   ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
                   ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
+    event_file:
+        name: "Event File"
+        # Only run on PRs if the source branch is on someone else's repo
+        if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
+        runs-on: ubuntu-latest
+        steps:
+            - name: Upload
+              uses: actions/upload-artifact@v4
+              with:
+                  name: Event File
+                  path: ${{ github.event_path }}
