--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=org.incendo
-version=1.0.0-beta.1
+version=1.0.0-SNAPSHOT
 description=Discord integrations for Cloud.
 
 org.gradle.caching=true
