--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ dokka = "1.9.10"
 coroutines = "1.7.3"
 
 # Cloud
-cloud = "2.0.0-beta.3"
+cloud = "2.0.0-rc.1"
 
 # External
 immutables = "2.10.1"
