--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ description=Discord integrations for Cloud.
 
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx1g -XX:MaxMetaspaceSize=512m
