--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,13 +40,13 @@ jobs:
                   fi
             - name: Publish Snapshot
               if: "${{ env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/master' }}"
-              run: ./gradlew publishAllPublicationsToSonatypeSnapshots
+              run: ./gradlew publishAllPublicationsToSonatypeSnapshots --stacktrace
               env:
                   ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
                   ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
             - name: Publish Release
               if: "${{ env.STATUS == 'release' && github.event_name == 'release' }}"
-              run: ./gradlew publishReleaseCentralPortalBundle
+              run: ./gradlew publishReleaseCentralPortalBundle --stacktrace
               env:
                   ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
                   ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
